--- a/app/client/index.html
+++ b/app/client/index.html
@@ -5,8 +5,8 @@
     <title>Notebook</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assets/fontawesome/css/all.css" />
     <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" />
     <script type="module" src="./index.tsx"></script>
 </head>
 <body>
